--- a/docs/setup-optioms.yaml
+++ b/docs/setup-optioms.yaml
@@ -12,7 +12,7 @@
 - Config 1.B:
     Computer: laptop
     Arduino: Nano Every (5V)
-    AC/DC converter: True
+    AC/DC converter: True  # + $11
     Comm: USB
     PC Power: battery
     Arduino Power: 120VAC/5VDC -> VIN
@@ -21,7 +21,7 @@
 
 - Config 2.A:
     Computer: laptop
-    Arduino: Nano 33 (3V3)
+    Arduino: Nano 33 (3V3) # + $10
     AC/DC converter: False
     Comm: USB
     PC Power: battery
@@ -31,7 +31,7 @@
 
 - Config 2.B:
     Computer: laptop
-    Arduino: Nano 33 (3V3)
+    Arduino: Nano 33 (3V3) # + $10
     AC/DC converter: True
     Comm: USB
     PC Power: battery
@@ -40,9 +40,9 @@
     Fan Power: 120VAC/5VDC
 
 - Config 3:
-    Computer: Raspberry Pi
-    Arduino: Nano 33 (3V3)
-    AC/DC converter: True
+    Computer: Raspberry Pi # + $25-100
+    Arduino: Nano 33 (3V3) # + $10
+    AC/DC converter: True  # + $11
     Comm: TX/RX
     Raspi Power: 120VAC/5VDC -> 5V
     Arduino Power: 120VAC/5VDC -> VIN
@@ -50,7 +50,7 @@
     Fan Power: 120VAC/5VDC
 
 - Config 4:
-    Computer: Raspberry Pi
+    Computer: Raspberry Pi # + $25-100
     Arduino: None
     AC/DC converter: True
     Comm: pty
@@ -62,8 +62,8 @@
 # Still in development
 - Config 5:
     Computer: laptop
-    Arduino: Nano 33 IoT (3V3)
-    AC/DC converter: True
+    Arduino: Nano 33 IoT (3V3) # + $10
+    AC/DC converter: True  # + $11
     Comm: WIFI
     PC Power: battery
     Arduino Power: 120VAC/5VDC -> VIN
