--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-colorzero==1.1
-gpiozero==1.5.1
-numpy==1.22
-pigpio==1.78
-pkg-resources==0.0.0
-pyserial==3.5
-PyYAML==5.4.1
-RPi.GPIO==0.7.0
-smbus==1.1.post2
-smbus2==0.4.0
+numpy==1.25.2
+pyserial==3.5b0
+PyYAML==6.0.1
+smbus2==0.4.3
