--- a/config.yml
+++ b/config.yml
@@ -11,11 +11,11 @@ PIN_CONFIG:
     pOT1: 18
     pOT2: 17
     pIO2: 4
-    ## PWM PIN_CONFIG
+    ## FAST PWM PIN_CONFIG
 #     pOT1: 18
 #     pOT2: 17
 #     pIO2: 22
-    ## PAC PIN_CONFIG
+    ## PHASE ANGLE CONTROL PIN_CONFIG
 #     pOT1: 18
 #     pOT2: 19
 #     pIO2: 22
