--- a/config.yml
+++ b/config.yml
@@ -7,6 +7,6 @@ PIN_CONFIG:
     EEPROM_SDA: 0 # required for HAT support
     EEPROM_SCL: 1 # required for HAT support
     ## DEFAULT PIN_CONFIG
-    pOT1: 18
-    pOT2: 17
-    pIO2: 4
+    pOT1: 17
+    # pOT2: 18
+    # pIO2: 4
