--- a/tcxd.service
+++ b/tcxd.service
@@ -7,7 +7,7 @@ StartLimitIntervalSec=0
 Type=simple
 Restart=always
 RestartSec=1
-ExecStart=/bin/bash /home/dfunni/TCx/start.sh dfunni
+ExecStart=/bin/bash /home/pi/piTCx/start.sh pi
 
 [Install]
 WantedBy=multi-user.target
