--- a/tcxd.service
+++ b/tcxd.service
@@ -7,7 +7,7 @@ StartLimitIntervalSec=0
 Type=simple
 Restart=always
 RestartSec=1
-ExecStart=/bin/bash /home/pi/piTCx/start.sh pi
+ExecStart=/bin/bash /home/<user>/piTCx/start.sh <user>
 
 [Install]
 WantedBy=multi-user.target
