--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 colorzero==2.0
+coverage==7.2.7
 gpiozero==2.0
 numpy==1.25.2
 pigpio==1.78
 pyserial==3.5b0
+pytest==7.4.4
 PyYAML==6.0.1
 smbus2==0.4.3
